--- a/index.html
+++ b/index.html
@@ -8,41 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <input class="numberInput" type="text">
-  <p></p>
-
-  <script>
-    const input = document.querySelector('.numberInput')
-    const para = document.querySelector('p')
-
-    function squared(num) {
-      return num * num
-    }
-    function cubed(num) {
-      return num * num * num
-    }
-
-    function factorial(num) {
-      if (num < 0) return undefined
-      if (num == 0) return 1;
-      let x = num - 1;
-      while (x > 1) {
-        num *= x
-        x--
-      }
-      return num
-    }
-
-    input.addEventListener('change', () => {
-      const num = parseFloat(input.value)
-      if (isNaN(num)) {
-        para.textContent = 'You need to enter a number!'
-      } else {
-        para.textContent = `${num} squared is ${squared(num)}. \n`
-        para.textContent += `${num} cubed is ${cubed(num)}. \n`
-        para.textContent += `${num} factorial is ${factorial(num)}. `
-      }
-    })
-  </script>
+  <script src="practice.js"></script>
 </body>
 </html>
