Luhn Checksum Validation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="outer">
+    <div class="middle">
+      <div class="inner">
+      </div>
+    </div>
+  </div>
   <script src="practice.js"></script>
 </body>
 </html>
