Learning about setInterval()

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
+        <h2 id="timer-text">0</h2>
+        <button id="btn-start">Start Timer</button>
+        <button id="btn-pause">Pause Timer</button>
       </div>
     </div>
   </div>
