--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h2 id="timer-text">0</h2>
         <button id="btn-start">Start Timer</button>
         <button id="btn-pause">Pause Timer</button>
+        <div id="demo"></div>
       </div>
     </div>
   </div>
