Looping throught array for a string

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <h2 id="timer-text">0</h2>
-        <button id="btn-start">Start Timer</button>
-        <button id="btn-pause">Pause Timer</button>
-        <div id="demo"></div>
+        <label for="search">Search by contact name: </label>
+        <input type="text" id="search">
+        <button>Search</button>
+        <p></p>
       </div>
     </div>
   </div>
