Launch countdown exercise

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <label for="search">Search by contact name: </label>
-        <input type="text" id="search">
-        <button>Search</button>
-        <p></p>
+        <div class="output"></div>
       </div>
     </div>
   </div>
