--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <div class="output"></div>
+        <div class="admitted"></div>
+        <div class="refused"></div>
       </div>
     </div>
   </div>
