Complete 'Loops 1' test challenge

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <div class="outer">
     <div class="middle">
       <div class="inner">
-        <div class="admitted"></div>
-        <div class="refused"></div>
+        <section class="preview"></section>
       </div>
     </div>
   </div>
