--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <section class="preview"></section>
-      </div>
-    </div>
-  </div>
+  <div></div>
   <script src="practice.js"></script>
 </body>
 </html>
