Change the title of a webpage with js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <div></div>
+  <h1>THE TITLE OF YOUR WEBPAGE</h1>
+  <div id="container"></div>
   <script src="practice.js"></script>
 </body>
 </html>
