--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <script src="practice.js" defer></script>
   <title>Document</title>
 </head>
 <body>
   <h1>THE TITLE OF YOUR WEBPAGE</h1>
-  <div id="container"></div>
-  <script src="practice.js"></script>
+  <div id="container">
+    <div class="content">This is the glorious text-content!</div>
+  </div>
 </body>
 </html>
