--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <script src="practice.js" defer></script>
-  <title>Document</title>
-</head>
-<body>
-  <h1>THE TITLE OF YOUR WEBPAGE</h1>
-  <div id="container">
-    <div class="content">This is the glorious text-content!</div>
-  </div>
-</body>
+<html>
+  <head>
+    <script src="practice.js" defer></script>
+    <title>My home page</title>
+  </head>
+  <body>
+    <h1>My home page</h1>
+    <p>Hello, I am Marijn and this is my home page.</p>
+    <p>I also wrote a book! Read it <a href="http://eloquentjavascript.net">here</a>.</p>
+  </body>
 </html>
