--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>My home page</title>
   </head>
   <body>
-    <h1>My home page</h1>
-    <p>Hello, I am Marijn and this is my home page.</p>
-    <p>I also wrote a book! Read it <a href="http://eloquentjavascript.net">here</a>.</p>
+    <p data-classified="secret">The launch code is 00000000.</p>
+    <p data-classified="unclassified">I have two feet.</p>
   </body>
 </html>
