Get heights of paragraph

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>My home page</title>
   </head>
   <body>
-    <p data-classified="secret">The launch code is 00000000.</p>
-    <p data-classified="unclassified">I have two feet.</p>
+    <p style="border: 3px solid red;">I'm boxed in</p>
   </body>
 </html>
