--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My home page</title>
   </head>
   <body>
-    <p style="border: 3px solid red;">I'm boxed in</p>
+    <p><span id="one"></span></p>
+    <p><span id="two"></span></p>
   </body>
 </html>
