--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
   <head>
     <script src="practice.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
     <title>My home page</title>
   </head>
   <body>
-    <p><span id="one"></span></p>
-    <p><span id="two"></span></p>
+    <p>And if you go chasing
+      <span class="animal">rabbits</span></p>
+    <p>And you know you're going to fall</p>
+    <p>Tell 'em a <span class="character">hookah smoking
+      <span class="animal">caterpillar</span></span></p>
+    <p>Has given you the call</p>
   </body>
 </html>
