--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <title>My home page</title>
   </head>
   <body>
-    <p>And if you go chasing
-      <span class="animal">rabbits</span></p>
-    <p>And you know you're going to fall</p>
-    <p>Tell 'em a <span class="character">hookah smoking
-      <span class="animal">caterpillar</span></span></p>
-    <p>Has given you the call</p>
+    <p style="text-align: center;">
+      <img src="https://static.remove.bg/remove-bg-web/588fbfdd2324490a4329d4ad22d1bd436e1d384a/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg" style="position: relative;">
+    </p>
   </body>
 </html>
