--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>My home page</title>
   </head>
   <body>
-    <p style="text-align: center;">
-      <img src="https://static.remove.bg/remove-bg-web/588fbfdd2324490a4329d4ad22d1bd436e1d384a/assets/start-1abfb4fe2980eabfbbaaa4365a0692539f7cd2725f324f904565a9a744f8e214.jpg" style="position: relative;">
-    </p>
+    <table>
+      <tr>
+        <th>name</th>
+        <th>height</th>
+        <th>place</th>
+      </tr>
+      <tr>
+        <th>Kilimanjar</th>
+        <th>5895</th>
+        <th>Tanzania</th>
+      </tr>
+    </table>
   </body>
 </html>
