Setting up to create first table

--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
     <title>My home page</title>
   </head>
   <body>
-    <table>
-      <tr>
-        <th>name</th>
-        <th>height</th>
-        <th>place</th>
-      </tr>
-      <tr>
-        <th>Kilimanjar</th>
-        <th>5895</th>
-        <th>Tanzania</th>
-      </tr>
-    </table>
+    <h1>Mountains</h1>
+    <div id="mountains"></div>
   </body>
 </html>
