Just saving, don't know what's going on

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My home page</title>
   </head>
   <body>
-    <h1>Mountains</h1>
-    <div id="mountains"></div>
+    <h1>Heading with a <span>span</span> element.</h1>
+    <p>A paragraph with <span>one</span>, <span>two</span> spans.</p>
   </body>
 </html>
