--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My home page</title>
   </head>
   <body>
-    <h1>Heading with a <span>span</span> element.</h1>
-    <p>A paragraph with <span>one</span>, <span>two</span> spans.</p>
+    <img src="https://eloquentjavascript.net/img/cat.png" id="cat" style="position: absolute;">
+    <img src="https://eloquentjavascript.net/img/hat.png" id="hat" style="position: absolute;">
   </body>
 </html>
