Learn about removing event handlers

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My home page</title>
   </head>
   <body>
-    <img src="https://eloquentjavascript.net/img/cat.png" id="cat" style="position: absolute;">
-    <img src="https://eloquentjavascript.net/img/hat.png" id="hat" style="position: absolute;">
+    <button>Act-once button</button>
+    <p>No handler here.</p>
   </body>
 </html>
