Learning touch events

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <script src="practice.js" defer></script>
     <link rel="stylesheet" href="styles.css">
-    <title>My home page</title>
+    <title>Title</title>
   </head>
   <body>
-    <button>Act-once button</button>
-    <p>No handler here.</p>
+    <p>Touch this page</p>
   </body>
 </html>
