--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <script src="practice.js" defer></script>
-    <link rel="stylesheet" href="styles.css">
-    <title>Title</title>
-  </head>
-  <body>
-    <p>🎈</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <script src="practice.js" defer></script>
+  <title>Title</title>
+</head>
+<body>
+</body>
 </html>
