Creating and adding elements practice

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Title</title>
   </head>
   <body>
-    <tab-panel>
-      <div data-tabname="one">Tab one</div>
-      <div data-tabname="two">Tab two</div>
-      <div data-tabname="three">Tab three</div>
-    </tab-panel>
+    <div id="A"></div>
+    <span id="B"></span>
+    <div id="C"></div>
+    <div id="D"></div>
+    <div id="E"></div>
   </body>
 </html>
