Get list of child nodes

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <title>Title</title>
   </head>
   <body>
-    <div id="A"></div>
-    <span id="B"></span>
-    <div id="C"></div>
-    <div id="D"></div>
-    <div id="E"></div>
+    <ul>
+      <li>Hi</li>
+      <li>there</li>
+    </ul>
   </body>
 </html>
