Learn about .insertRule() and .deleteRule()

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,10 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="practice.js" defer></script>
+    <style id="styleElement">
+      p {
+        line-height: 1.4em;
+        color: blue;
+      }
+      p {
+        font-size: 50px;
+      }
+    </style>
     <title>Title</title>
   </head>
   <body>
-    <p id="p1"></p>
-    <p id="p2"></p>
+    <p>Hi</p>
   </body>
 </html>
