--- a/index.html
+++ b/index.html
@@ -1,25 +1,11 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="practice.js" defer></script>
-    <style id="styleElement">
-      p {
-        line-height: 1.4em;
-        color: blue;
-      }
-      p {
-        font-size: 50px;
-      }
-    </style>
     <title>Title</title>
   </head>
   <body>
-    <p>Hi</p>
+    <div>mouse over me</div>
   </body>
 </html>
