--- a/index.html
+++ b/index.html
@@ -1,13 +1,224 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <script src="practice.js" defer></script>
-  <title>Item Lister</title>
-</head>
-<body>
-</body>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
+  </head>
+  <body>
+    <svg width="600px" height="600px" viewBox="-300 -300 600 600"
+    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+  <link rel="stylesheet"
+    href="style8.css" type="text/css"/>
+
+  <title>SVG demonstration</title>
+  <desc>Mozilla CSS Getting Started - SVG demonstration</desc>
+
+  <defs>
+    <radialGradient id="fade" cx="0" cy="0" r="200"
+        gradientUnits="userSpaceOnUse">
+      <stop id="fade-stop-1" offset="33%"/>
+      <stop id="fade-stop-2" offset="95%"/>
+    </radialGradient>
+  </defs>
+
+  <text id="heading" x="-280" y="-270">SVG demonstration</text>
+  <text id="caption" x="-280" y="-250">Move your mouse pointer over the flower.</text>
+
+  <g id="flower">
+    <circle id="overlay" cx="0" cy="0" r="200" stroke="none" fill="url(#fade)"/>
+
+    <g id="outer-petals">
+      <g class="quadrant">
+        <g class="segment">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(18)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(36)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(54)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(72)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+      </g>
+
+      <g class="quadrant">
+        <g class="segment" transform="rotate(90)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(108)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(126)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(144)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(162)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+      </g>
+
+      <g class="quadrant">
+        <g class="segment" transform="rotate(180)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(198)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(216)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(234)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(252)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+      </g>
+
+      <g class="quadrant">
+        <g class="segment" transform="rotate(270)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(288)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(306)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(324)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(342)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+      </g>
+    </g>
+
+    <g id="inner-petals" transform="rotate(9) scale(0.33)">
+      <g class="quadrant">
+        <g class="segment">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(18)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(36)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(54)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(72)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+      </g>
+
+      <g class="quadrant">
+        <g class="segment" transform="rotate(90)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(108)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(126)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(144)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(162)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+      </g>
+
+      <g class="quadrant">
+        <g class="segment" transform="rotate(180)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(198)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(216)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(234)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(252)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+      </g>
+
+      <g class="quadrant">
+        <g class="segment" transform="rotate(270)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(288)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(306)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(324)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+        <g class="segment" transform="rotate(342)">
+          <path class="segment-fill" d="M0,0 v-200 a40,40 0 0,0 -62,10 z"/>
+          <path class="segment-edge" d="M0,-200 a40,40 0 0,0 -62,10"/>
+        </g>
+      </g>
+    </g>
+  </g>
+</svg>
+  </body>
 </html>
