--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div id="content"></div>
-    <svg id="svgID" width="640" height="480"></svg>
+    <button onclick="makeNewData()">Randomize Data</button>
+    <div id="dataDisplayer">Data:</div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="practice.js"></script>
   </body>
