Create donut chart

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <svg width="500" height="400"> </svg>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="practice.js"></script>
   </body>
