Learning about Tables

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <title>Document</title>
   </head>
   <body>
-    <svg width="500" height="400"> </svg>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <table>
+      <tr>
+        <th>First Header</th>
+        <th>Second Header</th>
+      </tr>
+      <tr>
+        <td>This is a data cell</td>
+        <td>This is also a data cell!</td>
+      </tr>
+    </table>
     <script src="practice.js"></script>
   </body>
 </html>
