--- a/index.html
+++ b/index.html
@@ -3,96 +3,58 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>School timetable</title>
-    <style>
-    html {
-      font-family: sans-serif;
-    }
-
-    table {
-      border-collapse: collapse;
-      border: 2px solid rgb(200,200,200);
-      letter-spacing: 1px;
-      font-size: 0.8rem;
-    }
-
-    td, th {
-      border: 1px solid rgb(190,190,190);
-      padding: 10px 20px;
-    }
-
-    td {
-      text-align: center;
-    }
-
-    caption {
-      padding: 10px;
-    }
-    </style>
+    <title>My spending record</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>School timetable</h1>
-    <table>
-      <colgroup>
-        <col>
-        <col>
-        <col style="background-color: #97DB9A;">
-        <col style="width: 42px;">
-        <col style="background-color: #97DB9A;">
-        <col style="background-color: #DCC48E; border: 4px solid #C1437A;">
-        <col style="width: 42px;">
-        <col style="width: 42px;">
-      </colgroup>
-      <tr>
-        <td>&nbsp;</td>
-        <th>Mon</th>
-        <th>Tues</th>
-        <th>Wed</th>
-        <th>Thurs</th>
-        <th>Fri</th>
-        <th>Sat</th>
-        <th>Sun</th>
-      </tr>
-      <tr>
-        <th>1st period</th>
-        <td>English</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-        <td>German</td>
-        <td>Dutch</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <th>2nd period</th>
-        <td>English</td>
-        <td>English</td>
-        <td>&nbsp;</td>
-        <td>German</td>
-        <td>Dutch</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <th>3rd period</th>
-        <td>&nbsp;</td>
-        <td>German</td>
-        <td>&nbsp;</td>
-        <td>German</td>
-        <td>Dutch</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <th>4th period</th>
-        <td>&nbsp;</td>
-        <td>English</td>
-        <td>&nbsp;</td>
-        <td>English</td>
-        <td>Dutch</td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-      </tr>
+    <h1>My spending record</h1>
+
+      <table>
+        <caption>How I chose to spend my money</caption>
+          <thead>
+            <tr>
+              <th>Purchase</th>
+              <th>Location</th>
+              <th>Date</th>
+              <th>Evaluation</th>
+              <th>Cost (€)</th>
+            </tr>
+          </thead>
+          <tfoot>
+            <tr>
+              <td colspan="4">SUM</td>
+              <td>118</td>
+            </tr>
+          </tfoot>
+          <tr>
+            <td>Haircut</td>
+            <td>Hairdresser</td>
+            <td>12/09</td>
+            <td>Great idea</td>
+            <td>30</td>
+          </tr>
+          <tr>
+            <td>Lasagna</td>
+            <td>Restaurant</td>
+            <td>12/09</td>
+            <td>Regrets</td>
+            <td>18</td>
+          </tr>
+          <tr>
+            <td>Shoes</td>
+            <td>Shoeshop</td>
+            <td>13/09</td>
+            <td>Big regrets</td>
+            <td>65</td>
+          </tr>
+          <tr>
+            <td>Toothpaste</td>
+            <td>Supermarket</td>
+            <td>13/09</td>
+            <td>Good</td>
+            <td>5</td>
+          </tr>
     </table>
+
   </body>
 </html>
