--- a/index.html
+++ b/index.html
@@ -22,55 +22,55 @@
           <tr>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <th scope="col">Trousers</th>
-            <th scope="col">Skirts</th>
-            <th scope="col">Dresses</th>
-            <th scope="col">Bracelets</th>
-            <th scope="col">Rings</th>
+            <th id="trousers">Trousers</th>
+            <th id="skirts">Skirts</th>
+            <th id="dresses">Dresses</th>
+            <th id="bracelets">Bracelets</th>
+            <th id="rings">Rings</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <th rowspan="3">Belgium</th>
-            <th scope="row">Antwerp</th>
-            <td>56</td>
-            <td>22</td>
-            <td>43</td>
-            <td>72</td>
-            <td>23</td>
+            <th id="antwerp">Antwerp</th>
+            <td id="trousers antwerp">56</td>
+            <td id="skirts antwerp">22</td>
+            <td id="dresses antwerp">43</td>
+            <td id="bracelets antwerp">72</td>
+            <td id="rings antwerp">23</td>
           </tr>
           <tr>
-            <th scope="row">Gent</th>
-            <td>46</td>
-            <td>18</td>
-            <td>50</td>
-            <td>61</td>
-            <td>15</td>
+            <th id="gent">Gent</th>
+            <td id="trousers gent">46</td>
+            <td id="skirts gent">18</td>
+            <td id="dresses gent">50</td>
+            <td id="bracelets gent">61</td>
+            <td id="rings gent">15</td>
          </tr>
          <tr>
-           <th scope="row">Brussels</th>
-           <td>51</td>
-           <td>27</td>
-           <td>38</td>
-           <td>69</td>
-           <td>28</td>
+           <th id="brussels">Brussels</th>
+           <td id="trousers brussels">51</td>
+           <td id="skirts brussels">27</td>
+           <td id="dresses brussels">38</td>
+           <td id="bracelets brussels">69</td>
+           <td id="rings brussels">28</td>
          </tr>
          <tr>
            <th rowspan="2">The Netherlands</th>
-           <th scope="row">Amsterdam</th>
-           <td>89</td>
-           <td>34</td>
-           <td>69</td>
-           <td>85</td>
-           <td>38</td>
+           <th id="amsterdam">Amsterdam</th>
+           <td id="trousers amsterdam">89</td>
+           <td id="skirts amsterdam">34</td>
+           <td id="dresses amsterdam">69</td>
+           <td id="bracelets amsterdam">85</td>
+           <td id="rings amsterdam">38</td>
          </tr>
          <tr>
-           <th scope="row">Utrecht</th>
-           <td>80</td>
-           <td>12</td>
-           <td>43</td>
-           <td>36</td>
-           <td>19</td>
+           <th id="utrecht">Utrecht</th>
+           <td id="trousers utrecht">80</td>
+           <td id="skirts utrecht">12</td>
+           <td id="dresses utrecht">43</td>
+           <td id="bracelets utrecht">36</td>
+           <td id="rings utrecht">19</td>
          </tr>
        </tbody>
     </table>
