--- a/index.html
+++ b/index.html
@@ -1,80 +1,13 @@
 <!DOCTYPE html>
-<html>
-
-<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
-    <title>Items sold summary</title>
+    <title>Table template</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
-</head>
+  </head>
+  <body>
+    <h1>Table template</h1>
 
-<body>
-    <h1>Items sold summary</h1>
 
-    <table>
-      <caption>Items Sold August 2016</caption>
-        <thead>
-          <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <th colspan="3">Clothes</th>
-            <th colspan="2">Accessories</th>
-          </tr>
-          <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <th id="trousers">Trousers</th>
-            <th id="skirts">Skirts</th>
-            <th id="dresses">Dresses</th>
-            <th id="bracelets">Bracelets</th>
-            <th id="rings">Rings</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th rowspan="3">Belgium</th>
-            <th id="antwerp">Antwerp</th>
-            <td id="trousers antwerp">56</td>
-            <td id="skirts antwerp">22</td>
-            <td id="dresses antwerp">43</td>
-            <td id="bracelets antwerp">72</td>
-            <td id="rings antwerp">23</td>
-          </tr>
-          <tr>
-            <th id="gent">Gent</th>
-            <td id="trousers gent">46</td>
-            <td id="skirts gent">18</td>
-            <td id="dresses gent">50</td>
-            <td id="bracelets gent">61</td>
-            <td id="rings gent">15</td>
-         </tr>
-         <tr>
-           <th id="brussels">Brussels</th>
-           <td id="trousers brussels">51</td>
-           <td id="skirts brussels">27</td>
-           <td id="dresses brussels">38</td>
-           <td id="bracelets brussels">69</td>
-           <td id="rings brussels">28</td>
-         </tr>
-         <tr>
-           <th rowspan="2">The Netherlands</th>
-           <th id="amsterdam">Amsterdam</th>
-           <td id="trousers amsterdam">89</td>
-           <td id="skirts amsterdam">34</td>
-           <td id="dresses amsterdam">69</td>
-           <td id="bracelets amsterdam">85</td>
-           <td id="rings amsterdam">38</td>
-         </tr>
-         <tr>
-           <th id="utrecht">Utrecht</th>
-           <td id="trousers utrecht">80</td>
-           <td id="skirts utrecht">12</td>
-           <td id="dresses utrecht">43</td>
-           <td id="bracelets utrecht">36</td>
-           <td id="rings utrecht">19</td>
-         </tr>
-       </tbody>
-    </table>
-
-</body>
-
+  </body>
 </html>
