--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
     <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <input type="checkbox" id="toggle">
-    <label for="toggle">&#9776</label>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
+    <a href="#" class="arrow">Continue Reading</a>
   </body>
 </html>
 
