--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <a href="#" class="arrow">Continue Reading</a>
+    <div class="long">
+      Please scroll down
+    </div>
+    <div class="sticky first">
+      postion:sticky
+    </div>
+    <div class="long">
+      Scroll Further down
+    </div>
+    <div class="long">
+      Scroll Further down
+    </div>
   </body>
 </html>
-
-<!-- 
-  <main class="parent">
-    <div class="child group1">
-      <div class="grand-child group1">gchild 1</div>
-    </div>
-    <div class="child group2">
-      <div class="grand-child group2">gchild 2</div>
-    </div>
-    <div class="child group3">
-      <div class="grand-child group3">gchild 3</div>
-    </div>
-   </main>
- -->
