Learn about min(), max(), and clamp()

--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="utf-8">
     <title>FCC Lessons</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
+    <script src="practice.js" defer></script>
   </head>
   <body>
-    <div class="long">
-      Please scroll down
-    </div>
-    <div class="sticky first">
-      postion:sticky
-    </div>
-    <div class="long">
-      Scroll Further down
-    </div>
-    <div class="long">
-      Scroll Further down
-    </div>
+    <main>
+      <h2>Review CSS comments about min() and max()</h2>
+      <p>Review the MDN docs for <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/CSS/min()">min()</a> and <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/CSS/max()">max()</a>, and see support on <a target="_blank" href="https://caniuse.com/css-math-functions">CanIUse</a>. For more ideas on how to use them, catch the replay of my talk at <a target="_blank" href="https://5t3ph.dev/css-cafe">CSS Cafe</a>. Also check out a full review of <a href="https://moderncss.dev/practical-uses-of-css-math-functions-calc-clamp-min-max/" target="_blank">the four best supported CSS math functions</a> over on ModernCSS.dev</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam error deserunt obcaecati maiores impedit ipsa sed inventore culpa, hic placeat qui fugit! Ipsam accusamus et dicta, quisquam quibusdam voluptatum aliquid!</p>
+    </main>
   </body>
 </html>
