Learn how to use dark mode default settings with css media query

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <script src="practice.js" defer></script>
   </head>
   <body>
-    <main>
-      <h2>Review CSS comments about min() and max()</h2>
-      <p>Review the MDN docs for <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/CSS/min()">min()</a> and <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/CSS/max()">max()</a>, and see support on <a target="_blank" href="https://caniuse.com/css-math-functions">CanIUse</a>. For more ideas on how to use them, catch the replay of my talk at <a target="_blank" href="https://5t3ph.dev/css-cafe">CSS Cafe</a>. Also check out a full review of <a href="https://moderncss.dev/practical-uses-of-css-math-functions-calc-clamp-min-max/" target="_blank">the four best supported CSS math functions</a> over on ModernCSS.dev</p>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam error deserunt obcaecati maiores impedit ipsa sed inventore culpa, hic placeat qui fugit! Ipsam accusamus et dicta, quisquam quibusdam voluptatum aliquid!</p>
-    </main>
+    <div class="container">
+      <p>Based on your theme setting in your OS or user agent, you're now viewing this example with the <span class='theme-name'></span> theme!</p>
+    </div>
   </body>
 </html>
