--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <script src="practice.js" defer></script>
   </head>
   <body>
-    <div class="container">
-      <p>Based on your theme setting in your OS or user agent, you're now viewing this example with the <span class='theme-name'></span> theme!</p>
+    <div>
+      <label for="username">What's your name?</label>
+      <input type="text" id="username">
+      <button class="greet-btn">Greet Me</button>
     </div>
+    <h1 class="greeting"></h1>
   </body>
 </html>
