--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <script src="practice.js" defer></script>
   </head>
   <body>
-    <div>
-      <label for="username">What's your name?</label>
-      <input type="text" id="username">
-      <button class="greet-btn">Greet Me</button>
-    </div>
-    <h1 class="greeting"></h1>
+    <label class="form-control">
+      <input type="checkbox" name="checkbox" />
+      Checkbox
+    </label>
+    <label class="form-control">
+      <input type="checkbox" name="checkbox-checked" checked />
+      Checkbox - checked
+    </label>
   </body>
 </html>
