--- a/index.html
+++ b/index.html
@@ -4,27 +4,32 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles.css">
+    <script src="practice.js"></script>
     <title>Postcard example</title>
   </head>
   <body>
     <form>
-      <div>
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name">
-      </div>
-      <div>
-        <label for="email">Email: </label>
-        <input type="email" name="email" id="email">
-      </div>
-      <div>
-        <label for="tel">Phone number:</label>
-        <input type="tel" name="tel" id="tel">
-      </div>
-      <div>
-        <label for="message">Message:</label>
-        <textarea name="message" id="message"></textarea>
-      </div>
+      <fieldset>
+        <legend>Feedback form</legend>
+
+        <p>Required fields are labelled with "required".</p>
+        <div>
+          <label for="fname">First name: </label>
+          <input id="fname" name="fname" type="text" required>
+          <span></span>
+        </div>
+        <div>
+          <label for="lname">Last name: </label>
+          <input id="lname" name="lname" type="text" required>
+          <span></span>
+        </div>
+        <div>
+          <label for="email">Email address: </label>
+          <input id="email" name="email" type="email">
+          <span></span>
+        </div>
+        <div><button>Submit</button></div>
+      </fieldset>
     </form>
-    <button class="btn">Submit</button>
   </body>
 </html>
