--- a/index.html
+++ b/index.html
@@ -3,36 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Change Password Visibility</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="practice.js" defer></script>
     <link rel="stylesheet" href="https://codepen.io/web-dot-dev/pen/abpoXGZ.css">
     <link rel="stylesheet" href="https://codepen.io/web-dot-dev/pen/gOgYqvz.css">
   </head>
   <body>
-    <form action="#0">
-      <div>
-        <input type="text" name="first_name" id="first_name" required placeholder=" " />
-        <label for="first_name" class="card">First Name</label>
-      </div>
-      <div>
-        <input type="text" name="last_name" id="last_name" required placeholder=" " />
-        <label for="last_name">Last Name</label>
-      </div>
-      <div>
-        <input type="email" name="email" id="email" required placeholder=" " />
-        <label for="email">Email Address</label>
-        <div class="requirements">
-          Must be a valid email address
-        </div>
-      </div>
-      <div>
-        <input type="password" id="password" name="password" required placeholder=" " pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" />
-        <label for="password">Password</label>
-        <div class="requirements">
-          Your password must be at least 6 characters as well as contain at least one uppercase, one lowercase, and one number.
-        </div>
-      </div>
-      <input type="submit" value="Sign Up" />
-    </form>
+    <div class="wrapper">
+      <div class="box1">One</div>
+      <div class="box2">Two</div>
+      <div class="box3">Three</div>
+      <div class="box4">Four</div>
+    </div>
   </body>
 </html>
