Complete TOP exercise '01-grid-layout-1'

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://codepen.io/web-dot-dev/pen/gOgYqvz.css">
   </head>
   <body>
-    <div class="wrapper">
-      <div class="box1">One</div>
-      <div class="box2">Two</div>
-      <div class="box3">Three</div>
-      <div class="box4">Four</div>
+    <div class="container">
+      <div class="header">Header</div>
+      <div class="side">Sidebar</div>
+      <div class="nav">Nav</div>
+      <div class="art">Article</div>
+      <div class="foot">Footer</div>
     </div>
   </body>
 </html>
