--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>
     <div class="container">
       <div class="header">Header</div>
-      <div class="side">Sidebar</div>
+      <div class="sidebar">Sidebar</div>
       <div class="nav">Nav</div>
-      <div class="art">Article</div>
-      <div class="foot">Footer</div>
+      <div class="article">Article</div>
+      <div class="footer">Footer</div>
     </div>
   </body>
 </html>
