--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <script src="practice.js" defer></script>
   </head>
   <body>
+    <h1></h1>
+    <div>
+      <h2></h2>
+      <p></p>
+      <div>
+        <i></i>
+      </div>
+    </div>
   </body>
 </html>
