Learn about object literals

--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
 
 
 
-<!-- // goal wpm = 39
-// lines to practice = 12 -->
+<!-- 
+  goal wpm = 40
+  lines to practice = 13 
+-->
+
+<!-- 
+  page: 10
+-->
