Learn about Namespces with Public/Private variables

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/eventemitter3/4.0.7/index.min.js" integrity="sha512-Nn+fuByx+JZOUDYVLmCWg4lySybBp9KMI8NpUzkD/69HcondNJ6MZE9jxv8qDPCTyIK+kEzy7QDSZcYOy6KmfA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/asynquence/0.10.2/asq.js" integrity="sha512-d2TwO20bLHKoYj+xhd8oXu2Rt628Fsz9FWwfQFV/J+5XM9bvfl1/p3mWIq4VZLY7epb5w2UBNa0zCfZlj6QJKA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-    <script src="practice.js" defer></script>
-    <script type="module" src="bakery.mjs"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="practice.js" type="module" defer></script>
   </head>
   <body>
-    <div id="target"></div>
+    <div class="container"></div>
   </body>
 </html>
 
@@ -25,5 +24,5 @@ lines to practice = 15(15 is max on speedcoder)
 <!-- 
 Where I left off:(Learning JavaScript Design Patterns)
 
-Dynamic Imports
+Modern Module Pattern with WeakMap
 -->
