Learning about Pseudo-classical Decorators

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <script src="practice.js" type="module" defer></script>
   </head>
   <body>
-    <button id="addNewObserver">Add New Observer checkbox</button>
-    <input id="mainCheckbox" type="checkbox"/>
-    <div id="observersContainer"></div>
   </body>
 </html>
 
@@ -26,5 +23,5 @@ lines to practice = 15(15 is max on speedcoder)
 <!-- 
 Where I left off:(Learning JavaScript Design Patterns)
 
-Differences Between The Observer And Publish/Subscribe Pattern
+Abstract Decorators
 -->
