Converted function notation to class

--- a/index.html
+++ b/index.html
@@ -11,41 +11,14 @@
     <script src="practice.js" defer></script>
     <script src="fcc.js" defer></script>
   </head>
-  <body class="body">
-    <div class="title">Tic Tac Toe</div>
-    <div class="start-menu">
-      <form class="form">
-        <label for="player1">X's</label>
-        <input type="text" name="player1" id="player1" placeholder="Player 1">
-        <span id="player1-display"></span>
-        <br><br>
-        <label for="player2">O's</label>
-        <input type="text" name="player2" id="player2" placeholder="Player 2">
-        <span id="player2-display"></span>
-      </form>
-      <button class="start-btn">Pass & Play</button>
-      <button class="cpu-btn">Play Computer</button>
-      <span class="warning">Enter player names or play CPU</span>
-    </div>
-    <!-- Tic tac toe board -->
-    <div class="container">
-      <span class="space-1"></span>
-      <span class="space-2"></span>
-      <span class="space-3"></span>
-      <span class="space-4"></span>
-      <span class="space-5"></span>
-      <span class="space-6"></span>
-      <span class="space-7"></span>
-      <span class="space-8"></span>
-      <span class="space-9"></span>
-    </div>
+  <body>
   </body>
 </html>
 
 
 
 <!-- 
-goal wpm = 45
+goal wpm = 41(a lot of them)
 lines to practice = 15(15 is max on speedcoder)
 -->
 
