Learn about exports

--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="practice.js" defer></script>
-    <script src="fcc.js" defer></script>
+    <title>JS Example</title>
+    <script src="my-module.js" defer></script>
   </head>
   <body>
+    <script type="module">
+      import cube from './my-module.js';
+
+      console.log(cube(3));
+    </script>
   </body>
 </html>
 
 
 
+
+
+
+
+
 <!-- 
 goal wpm = 42(a lot of them)
+at 45, new code
 lines to practice = 15(15 is max on speedcoder)
 -->
 
