Learn about 'try and 'except'

--- a/index.html
+++ b/index.html
@@ -3,26 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>JS Example</title>
-    <script src="my-module.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pubsub-js/1.9.4/pubsub.min.js" integrity="sha512-GGfBS5/WTGwqhjo4nCGzQEWrX3+gkjF2G/JHs3cfhpynh5Lck+qqCwofvZlHoKuv/2P0B0Oo4Mq3Xa3Beyyf9A==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <script src="main.js" defer></script>
   </head>
   <body>
-    <script type="module">
-      import cube from './my-module.js';
-
-      console.log(cube(3));
-    </script>
+    <ul id="questions"></ul>
   </body>
 </html>
 
 
 
 
-
-
-
-
 <!-- 
-goal wpm = 42(a lot of them)
+POODR Book: pg 113
+
+goal wpm = 44(a lot of them)
 at 45, new code
 lines to practice = 15(15 is max on speedcoder)
 -->
