First attempt at 99bottles solution

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 
 <!-- 
-POODR Book: pg 181
+99 Bottles Book: pg 25
 
-goal wpm = 44(a lot of them)
-at 45, new code
+goal wpm = 36(a lot of them)
+at 46, new code
 lines to practice = 15(15 is max on speedcoder)
 -->
 
@@ -28,3 +28,8 @@ Where I left off:(Learning JavaScript Design Patterns)
 
 Namespacing Patterns
 -->
+
+<!-- 
+Physics book(ch1-ch14): pg 33 1.3
+Calculus book: pg 28
+ -->
