--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </html>
 
 <!-- 
-99 Bottles Book: pg 291
+99 Bottles Book: pg 355 8.4
 
-goal wpm = 38(a lot of them)
+goal wpm = 39(a lot of them)
 at 46, new code
 lines to practice = 15(15 is max on speedcoder)
 -->
@@ -27,7 +27,7 @@ Namespacing Patterns
 -->
 
 <!-- 
-Physics book(ch1-ch14): pg 44
-Calculus book: pg 32
+Physics book(ch1-ch14): pg 46 3
+Calculus book: pg 32 & 21
   #'s missed: 4, 5
  -->
