Loop to createBoard()

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
