Implement win/tie conditions to DOM version ✅

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <div class="container">
       <h1 class="turn"></h1>
+      <h2 class="game-result"></h2>
       <div class="board"></div>
     </div>
     <script src="loops.js"></script>
