Count word appearance with dictionaries

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <link rel="stylesheet" href="reset.css">
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container"></div> 
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
 
 <!-- 
-goal wpm = 44(a lot of them)
-at 46, new code
+goal wpm = 43(a lot of them)
+after 47 completion, new code
+backtracking after completion: 9wpm
 lines to practice = 15(15 is max on speedcoder)
 -->
 
@@ -29,7 +30,7 @@ Namespacing Patterns
 -->
 
 <!-- 
-Physics book(ch1-ch14): pg 56
+Physics book(ch1-ch14): pg 57
 Calculus book: pg 32
   #'s missed: 4, 5
  -->
