Pink box css/js animation

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
       referrerpolicy="no-referrer"
       defer
     ></script>
+    <!-- <link rel="stylesheet" href="reset.css" /> -->
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="reset.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="trigger">
+      <div class="container"></div>
+    </div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
@@ -42,15 +44,8 @@ Phyhics book(ch1-ch14): pg 58
 Calculus book: pg 39
 -->
 
-<!--
-Practice:
-Exercism 10 
-CodeWars 10
-HackerRank 7
--->
-
 <!-- 
 Chat:
-generate 4 interview question to ask a dentist owner
+generate 4 interview questions to ask a dentist owner
 create a regex expression that matches all emails
 -->
