--- a/index.html
+++ b/index.html
@@ -18,12 +18,25 @@
       referrerpolicy="no-referrer"
       defer
     ></script>
-    <!-- <link rel="stylesheet" href="reset.css" /> -->
+    <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="trigger">
-      <div class="container"></div>
+    <div class="container">
+      <nav class="nav1">
+        <span class="title">Raul Villalobos</span>
+        <ul class="right-nav">
+          <li class="item1">Menu</li>
+          <li class="item2">Categories</li>
+          <li class="item3">Contact</li>
+        </ul>
+      </nav>
+      <ul class="category-drop">
+        <li class="catd1"><a href="#">Cheese Burger</a></li>
+        <li class="catd2"><a href="#">Drinks</a></li>
+        <li class="catd3"><a href="#">Fries</a></li>
+        <li class="catd4"><a href="#">Shakes</a></li>
+      </ul>
     </div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
