Learn about callbacks and promises

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Desktop</title>
+    <title>Our superheroes</title>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
       integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
@@ -25,16 +25,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Faster+One"
+      rel="stylesheet"
+    />
     <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <form class="content">
-      <label for="name">Name:</label>
-      <input id="name" type="text" required minlength="4" maxlength="15" />
-      <span id="name-message"></span>
-      <input type="submit" value="Submit" id="submit" />
-    </form>
+    <p id="demo"></p>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
