Promises example from MDN

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <p id="demo"></p>
+    <div class="content"></div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
