Complete exercise 1 for python

--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
       href="https://fonts.googleapis.com/css?family=Faster+One"
       rel="stylesheet"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/7.8.0/rxjs.umd.min.js"
+      integrity="sha512-v0/YVjBcbjLN6scjmmJN+h86koeB7JhY4/2YeyA5l+rTdtKLv0VbDBNJ32rxJpsaW1QGMd1Z16lsLOSGI38Rbg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <!-- <input type="text" name="" id="search-box" required />
+    <button id="search-btn">search</button> -->
     <div class="content"></div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
