Check if a number is 'balanced'

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <h2>Terms and Conditions</h2>
     <h3>Please read our Terms and Conditions and sign below.</h3>
     <section id="top-section">
-      <div id="">
-        <div>
+      <div id="first-name-whole">
+        <div id="first-name-title">
           <label for="">First name</label>
           <p>*</p>
         </div>
         <input type="text" name="" id="" />
       </div>
-      <div>
-        <div>
+      <div id="last-name-whole">
+        <div id="last-name-title">
           <label for="">Last name</label>
           <p>*</p>
         </div>
         <input type="text" name="" id="" />
       </div>
-      <div>
-        <div>
+      <div id="email-whole">
+        <div id="email-title">
           <label for="">Email</label>
           <p>*</p>
         </div>
